Fixing the spacing under h3.

--- a/source/theme/less/cam.less
+++ b/source/theme/less/cam.less
@@ -9,6 +9,7 @@
 @sansSerifFont:             "calluna-sans";
 @serifFont:                 "calluna";
 
+h3 {margin-bottom: 0px;}
 
 body {background: @white;}
 @navbarBackground: @white;
